# WasmEnv

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  build.bat  build.sh  emscripten.profile  main.cpp  run.bat  run.sh
Add/: CMakeLists.txt  build.bat  conanfile.txt  main.cpp
Fibonacci/: fib.html  fib.js  fib.wat
HelloWorld/: CMakeLists.txt
HelloWorldHTML/: CMakeLists.txt  LoadWasmManualy.html  build.bat  hello-world.wasm.map  main.cpp  run.bat  run.sh
HelloWorldHTML/src/: Greet.cpp  Greet.h
HelloWorldJS/: CMakeLists.txt  build.bat  build.sh  emscripten.profile  main.cpp  my_lib.cpp  run.bat  run.sh
HelloWroldMininal/: TheAnswerToEverything.html  TheAnswerToEverything.wat
IO/: CMakeLists.txt  build.bat  build.sh  emscripten.profile  io-read.html  io-write.html  run.bat  run.sh  test_idbfs_sync.c
