cmake_minimum_required(VERSION 2.8)

project(hello-world)

add_executable(${PROJECT_NAME} main.cpp)

install(
  TARGETS ${PROJECT_NAME}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)

install(FILES ${PROJECT_NAME}.js ${PROJECT_NAME}.wasm DESTINATION bin)

if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  set(CMAKE_INSTALL_PREFIX
      ${CMAKE_SOURCE_DIR}
      CACHE PATH "..." FORCE)
endif()

message(STATUS "RUNTIME_OUTPUT_DIRECTORY=${RUNTIME_OUTPUT_DIRECTORY}")
